# heart-attack

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  cookiecutter.json  devenv.yaml  pyproject.toml  readme.rst  setup.cfg
notebooks/: 001-data_exploration.ipynb
service/: config.py  dependencies.py  main.py
service/api/: contracts.py  endpoints.py  etl.py
service/model/: __init__.py  predict.py  types.py
src/data/: df_info.py  features.py
src/features/: feat_select.py
workflow/: .gitignore  Snakefile  config.py  config.yaml
workflow/rules/: exploration.smk  tests.smk
